--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <title>BOMBERMAN</title>
     <link rel="stylesheet" href="src/stylesheets/board.css">
+    <script type="text/javascript" src="./src/player.js"></script>
+    <script type="text/javascript" src="./src/items.js"></script>
+    <script type="text/javascript" src="./src/board.js"></script>
+    <script type="text/javascript" src="./src/computer.js"></script>
+    <script type="text/javascript" src="./src/treasure.js"></script>
     <script type="text/javascript" src="./src/game.js"></script>
+    <script type="text/javascript" src="./src/main.js"></script>
   </head>
-  <body>
+  <body bgcolor= #dcdcdc>
+
     <section class="modal">
       <section class="top-nav">
         <h2>How to play</h2>
@@ -17,30 +24,79 @@
           Use the arrow keys to move around the board
         </p>
         <p>
-          Press 'Space' to place a bomb. Bomb explosion time: 4sec.
+          Press 'Space' to place a bomb. Bomb explosion time: 4 sec.
         </p>
       </section>
     </section>
+
+    <section class="modal">
+      <section class="top-nav">
+        <h2>Stats</h2>
+        <span id="closed">&#10006;</span>
+      </section>
+      <section class="modal-content">
+        <p>
+          Bricks Destroyed: <b id="bricks"></b>
+        </p>
+        <p>
+          Bombs Used: <b id="bombs"></b>
+        </p>
+        <p>
+          Moves Made: <b id="moves"></b>
+        </p>
+        <p ></p>
+      </section>
+    </section>
+
+    <section class="modal">
+      <section class="top-nav">
+        <h2>Global Stats</h2>
+        <span id="closed2">&#10006;</span>
+      </section>
+      <section class="modal-content">
+        <div class="wrap">
+          <p>
+            Total Number of Deaths: <b id="deaths"></b> <button id="globalStatsButton">Drop</button>
+          </p>
+          <!--<p>-->
+            <!--Press 'Space' to place a bomb. Bomb explosion time: 4 sec.-->
+          <!--</p>-->
+        </div>
+      </section>
+    </section>
+
+
     <section class="modal" id="lost">
         <section class="modal-content">
           <h2>You lost!</h2>
           <button class="play-again">PLAY AGAIN</button>
         </section>
-      </section>
-      <section class="modal" id="won">
+    </section>
+
+    <section class="modal" id="won">
         <section class="modal-content">
           <h2>You won!</h2>
           <button class="play-again">PLAY AGAIN</button>
         </section>
-      </section>
-    <section class="top-nav">
-      <section class="buttons">
-        <button id="how-to">HOW TO PLAY</button>
-      </section>
     </section>
+
+    <!--<section class="top-nav">-->
+      <!--<section class="buttons">-->
+        <!--<button id="how-to">HOW TO PLAY</button>-->
+      <!--</section>-->
+    <!--</section>-->
+
+    <section class="topnav">
+      <button id="how-to">How to play</button>
+      <button id="how-to2">Stats</button>
+      <button id="how-to3">Global Stats</button>
+
+    </section>
+
     <section id="game-start-cover">
       <button id="start">START</button>
     </section>
     <canvas id="my-canvas" width="1100" height="593"></canvas>
+
   </body>
 </html>
